--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "4.5.0",
     "@fullcalendar/daygrid": "5.5.0",
     "@fullcalendar/react": "5.5.0",
+    "@hookform/resolvers": "^2.7.1",
     "@south-paw/react-vector-maps": "3.1.0",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.32",
@@ -27,6 +28,7 @@
     "react-chartjs-2": "2.11.1",
     "react-color": "2.19.3",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.12.2",
     "react-pose": "4.0.10",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
@@ -35,7 +37,7 @@
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "typescript": "3.9.7",
-    "yup": "0.32.9"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-app-rewired start --jsx react",
