--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "prettier": "2.2.1",
     "react-app-rewire-less-modules": "1.3.0",
     "react-app-rewired": "2.1.8",
-    "redux-devtools": "3.5.0"
+    "redux-devtools": "3.5.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
