--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "4.0.3",
     "recharts": "2.0.8",
     "redux": "4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "2.3.0",
     "typescript": "3.9.7",
     "yup": "^0.32.9"
