--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "redux-persist-transform-encrypt": "^3.0.1",
     "redux-thunk": "2.3.0",
     "typescript": "3.9.7",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "react-app-rewired": "2.1.8"
   },
   "scripts": {
     "start": "react-app-rewired start --jsx react",
@@ -78,7 +79,6 @@
     "customize-cra": "1.0.0",
     "prettier": "2.2.1",
     "react-app-rewire-less-modules": "1.3.0",
-    "react-app-rewired": "2.1.8",
     "redux-devtools": "3.5.0",
     "redux-devtools-extension": "^2.13.9"
   }
