--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-thunk": "2.3.0",
     "typescript": "3.9.7",
     "yup": "^0.32.9",
-    "react-app-rewired": "2.1.8"
+    "react-app-rewired": "2.1.8",
+    "customize-cra": "1.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start --jsx react",
@@ -76,7 +77,6 @@
     "@types/react-redux": "7.1.16",
     "@types/yup": "0.29.11",
     "babel-plugin-import": "1.13.3",
-    "customize-cra": "1.0.0",
     "prettier": "2.2.1",
     "react-app-rewire-less-modules": "1.3.0",
     "redux-devtools": "3.5.0",
