--- a/package.json
+++ b/package.json
@@ -41,7 +41,15 @@
     "typescript": "3.9.7",
     "yup": "^0.32.9",
     "react-app-rewired": "2.1.8",
-    "customize-cra": "1.0.0"
+    "customize-cra": "1.0.0",
+    "@types/history": "4.7.8",
+    "@types/react-redux": "7.1.16",
+    "@types/yup": "0.29.11",
+    "babel-plugin-import": "1.13.3",
+    "prettier": "2.2.1",
+    "react-app-rewire-less-modules": "1.3.0",
+    "redux-devtools": "3.5.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "react-app-rewired start --jsx react",
@@ -72,14 +80,5 @@
     "printWidth": 100,
     "trailingComma": "none"
   },
-  "devDependencies": {
-    "@types/history": "4.7.8",
-    "@types/react-redux": "7.1.16",
-    "@types/yup": "0.29.11",
-    "babel-plugin-import": "1.13.3",
-    "prettier": "2.2.1",
-    "react-app-rewire-less-modules": "1.3.0",
-    "redux-devtools": "3.5.0",
-    "redux-devtools-extension": "^2.13.9"
-  }
+  "devDependencies": {}
 }
