--- a/package.json
+++ b/package.json
@@ -38,21 +38,13 @@
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^3.0.1",
     "redux-thunk": "2.3.0",
+    "serve": "^12.0.0",
     "typescript": "3.9.7",
-    "yup": "^0.32.9",
-    "react-app-rewired": "2.1.8",
-    "customize-cra": "1.0.0",
-    "@types/history": "4.7.8",
-    "@types/react-redux": "7.1.16",
-    "@types/yup": "0.29.11",
-    "babel-plugin-import": "1.13.3",
-    "prettier": "2.2.1",
-    "react-app-rewire-less-modules": "1.3.0",
-    "redux-devtools": "3.5.0",
-    "redux-devtools-extension": "^2.13.9"
+    "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-app-rewired start --jsx react",
+    "start": "serve -s build",
+    "dev": "react-app-rewired start --jsx react",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
@@ -80,5 +72,16 @@
     "printWidth": 100,
     "trailingComma": "none"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "customize-cra": "1.0.0",
+    "@types/history": "4.7.8",
+    "@types/react-redux": "7.1.16",
+    "@types/yup": "0.29.11",
+    "babel-plugin-import": "1.13.3",
+    "prettier": "2.2.1",
+    "react-app-rewire-less-modules": "1.3.0",
+    "react-app-rewired": "2.1.8",
+    "redux-devtools": "3.5.0",
+    "redux-devtools-extension": "^2.13.9"
+  }
 }
