--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "0.21.1",
     "chart.js": "2.9.4",
     "d3-scale-chromatic": "2.0.0",
+    "dotenv": "^10.0.0",
     "echarts": "5.0.2",
     "echarts-for-react": "3.0.1",
     "formik": "2.2.6",
