--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.12.2",
     "react-pose": "4.0.10",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
