--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "2.2.6",
     "google-map-react": "2.1.9",
     "history": "5.0.0",
+    "moment": "^2.29.1",
     "node-sass": "5.0.0",
     "react": "17.0.1",
     "react-chartjs-2": "2.11.1",
