--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@ant-design/compatible": "1.0.8",
     "@ant-design/icons": "4.5.0",
-    "@fullcalendar/daygrid": "5.5.0",
-    "@fullcalendar/react": "5.5.0",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@hookform/resolvers": "^2.7.1",
     "@south-paw/react-vector-maps": "3.1.0",
     "@types/jest": "26.0.20",
@@ -16,6 +20,7 @@
     "@types/react-router-dom": "5.1.7",
     "antd": "4.13.1",
     "axios": "0.21.1",
+    "bootstrap": "^5.1.3",
     "chart.js": "2.9.4",
     "d3-scale-chromatic": "2.0.0",
     "dotenv": "^10.0.0",
